small spacing issue

--- a/html5boilerplate2.0/css/style.css
+++ b/html5boilerplate2.0/css/style.css
@@ -257,7 +257,7 @@ div.halfcol {
 }
 	
 footer {
-	margin-top:4em;
+	margin-top:8em;
 	padding-top: 1em;
 	border-top: 1px solid;
 	font-size:smaller;
